--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -7,11 +7,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
-    <sectionGroup name="bundleTransformer">
-      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
-    </sectionGroup>
+    
+    
     <sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
@@ -24,9 +21,7 @@
     <security allowRemoteAccess="false" />
   </elmah>
   <connectionStrings>
-    <add name="BaconContext"
-         providerName="System.Data.SqlClient"
-         connectionString="Data Source=localhost\RASHER;Initial Catalog=iambaconcouk_691276_db1;Integrated Security=SSPI;MultipleActiveResultSets=true" />
+    <add name="BaconContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\RASHER;Initial Catalog=iambaconcouk_691276_db1;Integrated Security=SSPI;MultipleActiveResultSets=true" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -40,8 +35,8 @@
   <location path="." inheritInChildApplications="false">
     <system.web>
       <customErrors mode="RemoteOnly" redirectMode="ResponseRewrite" defaultRedirect="~/500.aspx">
-        <error statusCode="404" redirect="~/404.aspx"/>
-        <error statusCode="500" redirect="~/500.aspx"/>
+        <error statusCode="404" redirect="~/404.aspx" />
+        <error statusCode="500" redirect="~/500.aspx" />
       </customErrors>
       <compilation debug="true" targetFramework="4.0" />
       <authentication mode="Forms">
@@ -85,10 +80,6 @@
           <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
         </providers>
       </sessionState>
-      <httpHandlers>
-        <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
-        <add path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" />
-      </httpHandlers>
     </system.web>
   </location>
   <system.net>
@@ -105,10 +96,7 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
-    <handlers>
-      <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
-      <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
-    </handlers>
+    
     <staticContent>
       <!--<mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />-->
     </staticContent>
@@ -134,10 +122,10 @@
 
     <urlCompression doStaticCompression="true" doDynamicCompression="true" />
     <httpErrors errorMode="DetailedLocalOnly">
-      <remove statusCode="404"/>
-      <error statusCode="404" path="404.html" responseMode="File"/>
-      <remove statusCode="500"/>
-      <error statusCode="500" path="500.html" responseMode="File"/>
+      <remove statusCode="404" />
+      <error statusCode="404" path="404.html" responseMode="File" />
+      <remove statusCode="500" />
+      <error statusCode="500" path="500.html" responseMode="File" />
     </httpErrors>
   </system.webServer>
   <runtime>
@@ -158,31 +146,19 @@
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-  <dotless minifyCss="false" cache="true" web="false" />
-  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
-    <core>
-      <css>
-        <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-        </minifiers>
-        <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
-        </translators>
-      </css>
-      <js>
-        <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-        </minifiers>
-        <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-        </translators>
-      </js>
-    </core>
-  </bundleTransformer>
+  
+  
 </configuration>
