--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -300,6 +300,7 @@
     <Content Include="Content\sass\base\mixins\_vertical-rhythm.scss" />
     <Content Include="Content\sass\components\_aside-nav.scss" />
     <Content Include="Content\sass\components\_meter.scss" />
+    <Content Include="Content\sass\components\_buttons.scss" />
     <None Include="Content\sass\modules\README.txt" />
     <Content Include="Content\stylesheets\pages\home\home-ie.css" />
     <Content Include="Content\stylesheets\pages\home\home.css" />
@@ -354,6 +355,7 @@
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\PostThumbViewModel.cshtml" />
     <Content Include="Views\Post\DisplayTemplates\CategoryCountViewModel.cshtml" />
+    <Content Include="Views\Post\DisplayTemplates\TagViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
