UI for article author section and post page re-design
Add styling for article author info.
Remove old styling and SASS components.
Update with new design look and feel.

--- a/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
+++ b/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Controllers\HomeController.Tests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Features\BlogPost.cs" />
     <Compile Include="Features\TagCloud.cs" />
     <Compile Include="Helpers\Assertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
