--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -264,6 +264,7 @@
     <Content Include="apple-touch-icon-precomposed.png" />
     <Content Include="apple-touch-icon.png" />
     <Content Include="Content\font\icomoon\icomoon.svg" />
+    <Content Include="Content\images\avatar.jpg" />
     <Content Include="Content\images\social.png" />
     <Content Include="Areas\Admin\Views\Category\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Category\Edit.cshtml" />
@@ -301,6 +302,7 @@
     <Content Include="Content\sass\components\_aside-nav.scss" />
     <Content Include="Content\sass\components\_meter.scss" />
     <Content Include="Content\sass\components\_buttons.scss" />
+    <Content Include="Content\sass\components\_author.scss" />
     <None Include="Content\sass\modules\README.txt" />
     <Content Include="Content\stylesheets\pages\home\home-ie.css" />
     <Content Include="Content\stylesheets\pages\home\home.css" />
@@ -357,6 +359,7 @@
     <Content Include="Views\Shared\DisplayTemplates\PostThumbViewModel.cshtml" />
     <Content Include="Views\Post\DisplayTemplates\CategoryCountViewModel.cshtml" />
     <Content Include="Views\Post\DisplayTemplates\TagViewModel.cshtml" />
+    <Content Include="Views\Shared\_SocialLinks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -465,7 +468,7 @@
     <None Include="Content\sass\partials\_respond.scss" />
     <None Include="Content\sass\pages\post\landingpage-ie.scss" />
     <None Include="Content\sass\pages\post\post-ie.scss" />
-    <None Include="Content\sass\partials\_code.scss" />
+    <None Include="Content\sass\base\_code.scss" />
     <None Include="Content\sass\pages\post\category.scss" />
     <None Include="Content\sass\pages\post\category-ie.scss" />
     <None Include="Content\sass\pages\post\tag.scss" />
