--- a/src/IAmBacon/IAmBacon.Web.Tests/packages.config
+++ b/src/IAmBacon/IAmBacon.Web.Tests/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.24.3" targetFramework="net40" />
-  <package id="Machine.Specifications" version="0.9.1" targetFramework="net40" />
+  <package id="Machine.Specifications" version="0.9.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Machine.Specifications.Mvc4" version="1.5.11.0" targetFramework="net40" />
-  <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net40" />
 </packages>
