--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -22,13 +22,18 @@
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="GoogleAnalyticsAccount" value="0" />
+    <add key="enableSimpleMembership" value="false"/>
+    <add key="autoFormsAuthentication" value="false"/>
   </appSettings>
+  <!--
+  See for enableSimpleMembership and autoFormsAuthentication http://stackoverflow.com/a/4682282/1593273
+  -->
   <location path="." inheritInChildApplications="false">
     <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
