--- a/src/IAmBacon/IAmBacon/packages.config
+++ b/src/IAmBacon/IAmBacon/packages.config
@@ -11,7 +11,10 @@
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
