Twitter card meta tags
Page meta tags to display a twitter card when site is linked on Twitter.

--- a/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
+++ b/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
@@ -111,6 +111,7 @@
     </Compile>
     <Compile Include="Features\BlogPost.cs" />
     <Compile Include="Features\TagCloud.cs" />
+    <Compile Include="Features\TwitterCard.cs" />
     <Compile Include="Helpers\Assertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
