Add twitter card to blog post page
Add twitter metadata to blog post page, so that when a post is shared on twitter it contains a summary.

--- a/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
+++ b/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Compile Include="Areas\Controllers\Controllers.Tests.cs" />
     <Compile Include="Areas\Controllers\BaseController.Tests.cs" />
+    <Compile Include="Context\OnActionExecutedContext.cs" />
     <Compile Include="Context\PostContext.cs" />
     <Compile Include="Controllers\HomeController.Tests.cs">
       <SubType>Code</SubType>
