--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Areas\Admin\ViewModels\LoginViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModels\PostViewModel.cs" />
     <Compile Include="Attributes\CanonicalUrlAttribute.cs" />
+    <Compile Include="Attributes\PostTwitterMetaTagsAttribute.cs" />
     <Compile Include="Attributes\TwitterMetaTagsAttribute.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
