--- a/src/IAmBacon/IAmBacon.Web.Tests/packages.config
+++ b/src/IAmBacon/IAmBacon.Web.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="3.24.3" targetFramework="net40" />
+  <package id="AutoFixture" version="3.30.4" targetFramework="net451" />
+  <package id="AutoFixture.AutoMoq" version="3.30.4" targetFramework="net451" />
   <package id="Machine.Specifications" version="0.9.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Machine.Specifications.Mvc4" version="1.5.11.0" targetFramework="net40" />
   <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net40" requireReinstallation="True" />
