(feature) Post summary on blog page
Include image in post summary on blog page if available as well as first paragraph of text. If no image just display first paragraph of text.
New:
- Post mapper. Mapping post entities to view model
- Tag mapper. Mapping tag entities to view model

--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -235,6 +235,8 @@
     <Compile Include="Presentation\Extensions\UrlExtensions.cs" />
     <Compile Include="Presentation\Helpers\EncryptionHelper.cs" />
     <Compile Include="Presentation\HtmlHelpers\Google.cs" />
+    <Compile Include="Presentation\Mappers\PostMapper.cs" />
+    <Compile Include="Presentation\Mappers\TagMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ErrorViewModel.cs" />
     <Compile Include="ViewModels\Home\HomeViewModel.cs" />
