--- a/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
+++ b/src/IAmBacon/IAmBacon.Web.Tests/IAmBacon.Web.Tests.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Features\TagCloud.cs" />
     <Compile Include="Features\TwitterCard.cs" />
     <Compile Include="Helpers\Assertions.cs" />
+    <Compile Include="Presentation\Extensions\StringExtensions.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
