--- a/src/IAmBacon/IAmBacon/Web.config
+++ b/src/IAmBacon/IAmBacon/Web.config
@@ -18,7 +18,7 @@
     <security allowRemoteAccess="false" />
   </elmah>
   <connectionStrings>
-    <add name="BaconContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost\RASHER;Initial Catalog=iambaconcouk_691276_db1;Integrated Security=SSPI;MultipleActiveResultSets=true" />
+    <add name="BaconContext" providerName="System.Data.SqlClient" connectionString="Data Source=RASHER\SQLEXPRESS;Initial Catalog=iambacon;Integrated Security=SSPI;MultipleActiveResultSets=true" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
