--- a/src/IAmBacon/IAmBacon/package.json
+++ b/src/IAmBacon/IAmBacon/package.json
@@ -1,12 +1,12 @@
-﻿{
-    "name": "IAmBacon.Web",
-    "version": "0.0.1",
-    "description": "Compiles SASS using grunt-sass and grunt-autoprefixer",
-    "devDependencies": {
-        "grunt": "0.4.5",
-        "grunt-cli": "0.1.13",
-        "grunt-sass": "~0.14.2",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-autoprefixer": "1.0.0"
-    }
+{
+  "name": "IAmBacon.Web",
+  "version": "0.0.1",
+  "description": "Compiles SASS using grunt-sass and grunt-autoprefixer",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.1.0"
+  }
 }
