--- a/src/IAmBacon/IAmBacon.Web.Tests/packages.config
+++ b/src/IAmBacon/IAmBacon.Web.Tests/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="AutoFixture" version="3.30.4" targetFramework="net451" />
   <package id="AutoFixture.AutoMoq" version="3.30.4" targetFramework="net451" />
-  <package id="Machine.Specifications" version="0.9.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="Machine.Specifications" version="0.9.3" targetFramework="net451" />
   <package id="Machine.Specifications.Mvc4" version="1.5.11.0" targetFramework="net40" />
-  <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="Machine.Specifications.Should" version="0.8.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
