--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Attributes\NoTrailingSlashAttribute.cs" />
     <Compile Include="Attributes\PostTwitterMetaTagsAttribute.cs" />
     <Compile Include="Attributes\RedirectToCanonicalUrlAttribute.cs" />
+    <Compile Include="Attributes\RedirectToHttpsAttribute.cs" />
     <Compile Include="Attributes\TwitterMetaTagsAttribute.cs" />
     <Compile Include="Constants\ContentDeliveryNetwork.cs" />
     <Compile Include="Controllers\BaseController.cs" />
