Styling improvements: - Remove home link from header - Move article styling to component scss file - Change link colour in articles

--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -399,6 +399,7 @@
     <Content Include="Content\sass\utilities\_tables.scss" />
     <Content Include="Content\sass\utilities\_grid.scss" />
     <Content Include="Content\sass\utilities\_display.scss" />
+    <Content Include="Content\sass\components\_article-content.scss" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
