--- a/src/IAmBacon/IAmBacon.Core.Application/IAmBacon.Core.Application.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Application/IAmBacon.Core.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IAmBacon.Core.Domain\IAmBacon.Core.Domain.csproj" />
   </ItemGroup>
 
