--- a/src/IAmBacon/IAmBacon.Core.Infrastructure/IAmBacon.Core.Infrastructure.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Infrastructure/IAmBacon.Core.Infrastructure.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\IAmBacon.Core.Domain\IAmBacon.Core.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
   </ItemGroup>
 </Project>
