Replace AutoFixture with Fakes

--- a/src/IAmBacon/IAmBacon.Core.Infrastructure/IAmBacon.Core.Infrastructure.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Infrastructure/IAmBacon.Core.Infrastructure.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Folder Include="PostCategory\Repositories\" />
+    <Folder Include="PostCategory\Repositories\Fakes\" />
+    <Folder Include="Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IAmBacon.Core.Domain\IAmBacon.Core.Domain.csproj" />
