--- a/src/IAmBacon/IAmBacon.Core.Infrastructure/IAmBacon.Core.Infrastructure.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Infrastructure/IAmBacon.Core.Infrastructure.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
   </ItemGroup>
 </Project>
