Create post doman and infrustructure

--- a/src/IAmBacon/IAmBacon.Core.Domain/IAmBacon.Core.Domain.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Domain/IAmBacon.Core.Domain.csproj
@@ -10,4 +10,8 @@
     <None Remove="CommandHandlers\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.16.0" />
+  </ItemGroup>
+
 </Project>
