Update package.json dependencies for gruntfile tasks

--- a/src/IAmBacon/IAmBacon/package.json
+++ b/src/IAmBacon/IAmBacon/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "description": "Compiles SASS using grunt-sass and grunt-autoprefixer",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.1.0"
+    "grunt": "^1.0.4",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
+    "node-sass": "^4.13.0"
   }
 }
