Update email configuration to use with outlook.com account

--- a/src/IAmBacon/IAmBacon.Admin/appsettings.json
+++ b/src/IAmBacon/IAmBacon.Admin/appsettings.json
@@ -6,6 +6,7 @@
     "Host": "localhost",
     "Port": 25,
     "UserName": null,
-    "Password": null
+    "Password": null,
+    "SystemEmailAddress": "email@iambacon.co.uk"
   }
 }
