refactor(npm): change repository url
Change repository url to GitHub

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "Z:\\\\Projects\\\\iambacon-style-guide.git\\\\"
+    "url": "https://github.com/iambacon/Styles"
   },
   "author": "Colin Bacon",
   "license": "ISC",
